Change string-merging to use a concurrent hashmap
This change was an experiment with the goal of improving performance, however
it actually made performance significantly worse. Increasing the time required
to link a debug build of clang from about 9 seconds to about 17. While there is
some room for improvement, the main problem seems to be when deduplicating the
strings by accessing the concurrent hashmap.

--- a/wild_lib/Cargo.toml
+++ b/wild_lib/Cargo.toml
@@ -35,6 +35,7 @@ flate2 = "1.0.33"
 bumpalo-herd = "0.1.2"
 zstd = "0.13.2"
 fxhash = "0.2.1"
+dashmap = "6.1.0"
 
 [dev-dependencies]
 ar = "0.9.0"
